# load_openBIS_data_into_python

./: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  openBIS_load_dataset_filedata.py  openBIS_load_spreadsheet_data.py  openbis.py  openbis_example.ipynb  openbis_example.py  setup.cfg
openbis/: __init__.py  openbis.py
