[metadata]
name = openBIS
description = "Python package for reading data from openBIS"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.km3net.de/km3py/km3pipe
author = Michael Krieger
author_email = michael.krieger@fau.de
maintainer = Michael Krieger
maintainer_email = michael.krieger@fau.de
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
keywords =
    epraktikum
    electronics
    labcourse
    fau
    erlangen

[options]
packages = find:
install_requires =
    numpy
python_requires = >=3.6
include_package_data = True
package_dir =
    =.


[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:openbis/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
